[package]
name = "battlesnake-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
reqwest = "0.11.23"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
